--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
