--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@ analyzer:
     dead_code: error
     unused_import: error
     unused_element: ignore
+    inference_failure_on_function_return_type: ignore
 
 linter:
   rules:
