--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
   provider: ^6.1.4
+  connectivity_plus: ^6.1.4
+  fluttertoast: ^8.2.12
+  mqtt_client: ^10.8.0
 
 dev_dependencies:
   flutter_test:
