--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
     unused_import: error
     unused_element: ignore
     inference_failure_on_function_return_type: ignore
+    lines_longer_than_80_chars: ignore
 
 linter:
   rules:
