--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,9 +9,9 @@ analyzer:
   errors:
     dead_code: error
     unused_import: error
-    unused_element: ignore
-    inference_failure_on_function_return_type: ignore
-    lines_longer_than_80_chars: ignore
+    unused_element: error
+    inference_failure_on_function_return_type: error
+    lines_longer_than_80_chars: error
 
 linter:
   rules:
