--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   mqtt_client: ^10.5.1
   mobile_scanner: ^6.0.10
   qr_code_scanner: ^1.0.1
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
